--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
     }
 } */
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
     body {
         font-size: 14px;
         background-color: lightblue;
@@ -66,7 +66,8 @@ body {
         color: black;
         background-color: rgb(80, 252, 255);
     }
-}
+} */
+
 /* 
 @media screen and (min-width: 1201px) {
     body {
